@@ -40,21 +40,6 @@ for x in "$@" ; do
 		if [ -z "${f/*SB shared object*/}" ]; then
 			echo "   ${x:${#D}:${#x}}"
 			${STRIP} ${PORTAGE_STRIP_FLAGS} "${x}"
-
-			if [ -x /usr/bin/readelf ] ; then
-				/usr/bin/readelf -d "${x}" | grep TEXTREL > /dev/null
-				if [ $? = 0 ]; then
-					echo "	${x:${#D}:${#x}} will contain runtime text relocations"
-					if [ "${FEATURES//*strict*/true}" == "true" ] ; then
-						echo -e "\aText relocations require a lot of extra work to be preformed by the"
-						echo -e "\adynamic linker which will cause serious performance impact on IA-32"
-						echo -e "\aand might not function properly on other architectures hppa for example."
-						echo -e "\aIf you are a programmer please take a closer look at this package and"
-						echo -e "\aconsider writing a patch which addresses this problem."
-						retval=1
-					fi >&2
-				fi
-			fi
 		fi
 	fi
 done
